# src/api/controller/YongHuJieKou/getNearUser.js
@@ -1,8 +1,0 @@
-import request from "@/plugins/myAxios.js";
-/**
- * 展示附近用户
- * /user/current
- */
-export function getNearUser() {
-  return request.get(`/user/nearUser`);
-}
