# src/api/controller/blog-controller/getBlogList.js
@@ -1,0 +1,7 @@
+import request from "@/plugins/myAxios.js";
+/**
+ * /blog/list
+ */
+export function getBlogList(config) {
+    return request.get(`/blog/list`, config);
+}
