# src/api/controller/blog-controller/postBlogCreate.js
@@ -1,0 +1,7 @@
+import request from "@/plugins/myAxios.js";
+/**
+ * /blog/create
+ */
+export function postBlogCreate(input, config) {
+    return request.post(`/blog/create`, input, config);
+}
