# src/api/interface/index.js
@@ -6,5 +6,12 @@ export * from "./apiTypes/UserLoginRequest";
 export * from "./apiTypes/BaseResponseUser";
 export * from "./apiTypes/TeamDto";
 export * from "./apiTypes/CreateTeamRequest";
+export * from "./apiTypes/BlogRequest";
+export * from "./apiTypes/BaseResponseString";
 export * from "./apiTypes/BaseResponseListUser";
+export * from "./apiTypes/BaseResponseListUserVo";
+export * from "./apiTypes/UserVo";
 export * from "./apiTypes/BaseResponseListTeamDto";
+export * from "./apiTypes/BaseResponseListBlog";
+export * from "./apiTypes/Blog";
+export * from "./apiTypes/BaseResponseBlog";
